<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D326706D"
    android:outlineSpotShadowColor="#FAF6F6"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:outlineAmbientShadowColor="#FAF6F6"
        android:outlineSpotShadowColor="#F3EFEF"
        android:shadowColor="#E8E3E3"
        android:textColor="@color/material_dynamic_neutral95"
        android:textColorHighlight="@color/material_dynamic_neutral80"
        android:textColorHint="#F8F0F0"
        android:textColorLink="#FAF2F2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/apellido"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="text"
        android:outlineAmbientShadowColor="#F8F4F4"
        android:outlineSpotShadowColor="#F4F0F0"
        android:shadowColor="#F6F0F0"
        android:textColor="#FDF9F9"
        android:textColorHighlight="#EFEAEA"
        android:textColorHint="#F6EEEE"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/email"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:outlineAmbientShadowColor="#F6F4F4"
        android:textColor="#F4F2F2"
        android:textColorHighlight="#F6F3F3"
        android:textColorHint="#F6F1F1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido" />

    <EditText
        android:id="@+id/clave"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/clave"
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="#FAF7F7"
        android:textColor="#F6F2F2"
        android:textColorHighlight="#F3EBEB"
        android:textColorHint="#F8F1F1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btnCrear"
        android:textColorLink="#673AB7"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/clave"
        tools:layout_editor_absoluteX="160dp" />

</androidx.constraintlayout.widget.ConstraintLayout>